# aeon_behavior_spectral

./: .gitignore  README.md  setup.cfg
code/scripts/: doPlotSimulatedTimeSeries.py  doSimulateTimeSeries.py
scripts/: doEstimatePowerSpectrum.py  doPlotPowerSpectrum.py
src/aeon_behavior_spectral/signal_processing/: spectral_analysis.py
